docs: sync docs 1:1 with code (two engines, two durability lanes)
Bring docs/ back to 1:1 with the current implementation.

Both matching engines are now documented (default lock-based, speed
Disruptor) and both durability lanes:
- Lane 1: default engine + Kafka/trade_events projection (producer on,
  consumer off by default; topic trades.byaccount; fill_dedup).
- Lane 2 (ADR 0007): speed engine + embedded Aeron Archive WAL with three
  pollers (AeronWalProjector trade tape, WalDbProjector Postgres,
  QuestDbTapeSink), ingress shed, Phase E snapshots, and the
  WAL to Postgres/QuestDB telemetry screen.

Restore the Aeron doc set (ADR 0005/0006/0007, speed-engine.md,
speed-engine-architecture.md, aeron-archive-plan.md marked delivered) and
audit every claim against code. Recover the speed-engine sections in docs
02/03. Fix k8s/base paths, FIX v1 status, migrations V12-V14,
queue.type=agrona. Mermaid diagrams refreshed and validated; no em-dashes;
timestamps bumped.